# stream-animations

begin/: package.json  pnpm-lock.yaml
begin/src/scenes/: example.tsx
godot/: .gitignore  entities.gdextension  icon.png.import  project.godot
godot/animations/grid_animation/: grid_animation.tscn
godot/animations/grid_animation/cursor/: cursor.svg.import  cursor.tscn
godot/animations/grid_animation/square/: square.svg.import  square.tscn
godot/entities/background/: background.gdshader  background.tscn  background_texture.tres
godot/entities/grid_animation/: grid_animation.gdshader
godot/gdextensions/entities/: .gitignore  CMakeLists.txt  README.md
godot/gdextensions/entities/cmake/: FetchBiBSGodot.cmake  FetchGodotCPP.cmake
godot/gdextensions/entities/include/entities/: animated_grid.hpp  animated_text.hpp  animation_controller.hpp  background.hpp  basic_animation.hpp  error.hpp  random_animator.hpp  test.hpp  text_animator.hpp
godot/gdextensions/entities/src/: CMakeLists.txt  animated_grid.cpp  animated_text.cpp  animation_controller.cpp  background.cpp  basic_animation.cpp  gdextension.cpp  random_animator.cpp  test.cpp  text_animator.cpp
godot/scenes/: begin.tscn
godot/utils/: signal_printer.gd
